* BUG#9634 Initialize contract broker if there is only one possibility
* BUG#9652 Bypass access right on commissions when deleting an invoice line
* BUG#9657 Add missing rights for the broker invoice creation entry point
* FEA#9476 Iteration on remove of agency field and replace it by distributor
* FEA#9349 Remove the field agency and replace it with the distribution network
* FEA#9492 Add a stored field for the commissioned contract
* FEA#9541 Commissions aggregated by agent and by date
* BUG#7515 Block manual creation / modification of commissions
* FEA#9133 Explicit broker definition in distribution network
* FEA#9044 Add the claim insurer invoice at the comission insurer entry point
* FEA#8849 UI enhancements on commission plan, plan lines and agents views
* FEA#8849 Allow to search commission plan from coverages
* FEA#8849 Allow to deactivate a commission plan

Version 2.0 - 2018-04-13
* OTH#0000 Various fixes for commissions
* OTH#0000 Fix flake 8
* OTH#0000 Merge with contract_process_commission
* FEA#8274 Force commission line split according the computation dates defined
* BUG#8321 Update 'change_broker' in order to update the agent value of validated invoices if we change broker contract
* BUG#8189 Fix depends on contract broker
* BUG#7914 Remove "agents" field from product / coverage form view and add relate instead
* BUG#7875 Use initial_start_date instead of start_date in dates recalculation algorithm
* FEA#0000 Add covered element on commission list
* OTH#0000 Update on_change_with_agent following 7755
* BUG#7755 Change the definition of the domain of 'agent' field by replacing 'start_date' by 'initial_start_date'
* FEA#7359 Add more informations on commission plans and agents to help the user understand what agents are used for a product and the hierarchy of commissions if defined
* FEA#7665 Allow to use commission start and end date in rule engine when calculation date are defined in a commission plan